# flutter_project_type_example

./: README.md  pubspec.yaml
FlutterModuleAndroidEx/: settings.gradle
FlutterModuleAndroidEx/app/: build.gradle
FlutterModuleAndroidEx/module_ex/: README.md  pubspec.yaml
android/app/: build.gradle
ffi_ex/: README.md  ffigen.yaml  pubspec.yaml
ffi_ex/android/: build.gradle  settings.gradle
ffi_ex/example/: README.md  pubspec.yaml
ffi_ex/ios/: ffi_ex.podspec
ffi_ex/lib/: duktape_bindings_generated.dart  ffi_ex.dart  ffi_ex_bindings_generated.dart
ffi_ex/linux/: CMakeLists.txt
ffi_ex/macos/: ffi_ex.podspec
ffi_ex/src/: CMakeLists.txt  ffi_ex.c
ffi_ex/windows/: CMakeLists.txt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugin_registrant.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
package_ex/: pubspec.yaml
package_ex/lib/: calculator.dart  package_ex.dart
package_ex/test/: package_ex_test.dart
plugin_ex/: README.md  pubspec.yaml
plugin_ex/android/: build.gradle  settings.gradle
plugin_ex/example/: README.md  pubspec.yaml
plugin_ex/ios/: plugin_ex.podspec
plugin_ex/lib/: cal_method.dart  plugin_ex.dart
plugin_ex/linux/: CMakeLists.txt  plugin_ex_plugin.cc
plugin_ex/macos/: plugin_ex.podspec
plugin_ex/test/: plugin_ex_method_channel_test.dart  (+1 more)
skeleton_ex/: README.md  pubspec.yaml
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+88 files in other folders)
